# AI-orchestra-5

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_airllm.md  PRD_benchmark.md  PRD_cost_model.md  PRD_quantization.md  PROMPT_BOOK.md  TODO.md
notebooks/: analysis.ipynb
src/airllm_lab/: __init__.py  constants.py  main.py
src/airllm_lab/sdk/: __init__.py  analysis_mixin.py  runs_mixin.py  sdk.py
src/airllm_lab/services/: __init__.py  airllm_runner.py  baseline_runner.py  benchmark.py  charts.py  cost_model.py  feasibility.py  hardware.py  metrics.py  model_download.py  models.py  monitor.py  roofline.py
src/airllm_lab/shared/: __init__.py  config.py  secrets.py  storage.py  version.py
tests/: conftest.py
tests/unit/: test_benchmark.py  test_config.py  test_constants.py  test_cost_model.py  test_feasibility.py  test_hardware.py  test_helpers.py  test_metrics.py  test_model_download.py  test_models.py  test_sdk.py  test_version.py
