[project]
name = "airllm-lab"
version = "1.0.0"
description = "Running a massive LLM locally: AirLLM, quantization and performance benchmarking"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "AirLLM Lab" }]
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
# Visualization stack (installed when we start plotting in Phase 5).
viz = ["matplotlib>=3.8", "seaborn>=0.13", "pandas>=2.2"]
# Heavy ML stack (torch / transformers / airllm / accelerate) is added later
# via `uv add` once the exact CUDA build is pinned (Phase 2/3).

[project.scripts]
airllm-lab = "airllm_lab.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airllm_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/airllm_lab/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
