[project]
name = "airllm-lab"
version = "1.0.0"
description = "Running a massive LLM locally: AirLLM, quantization and performance benchmarking"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "AirLLM Lab" }]
# Versions are pinned to the AirLLM-compatible "transformers 4.40" era. AirLLM
# 2.11 declares no upper bounds and breaks on transformers >= 4.41 (the rotary
# position-embeddings refactor + new cache), so we hold the stack at May-2024.
dependencies = [
    "accelerate==0.30.1",
    "airllm==2.11.0",
    "huggingface-hub==0.23.4",
    "optimum==1.19.2",
    "psutil>=5.9",
    "python-dotenv>=1.2.2",
    "safetensors>=0.4.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers==4.40.2",
]

[project.optional-dependencies]
# Visualization stack (installed when we start plotting in Phase 5).
viz = ["matplotlib>=3.8", "seaborn>=0.13", "pandas>=2.2"]
# Heavy ML stack (torch / transformers / airllm / accelerate) is added later
# via `uv add` once the exact CUDA build is pinned (Phase 2/3).

[project.scripts]
airllm-lab = "airllm_lab.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airllm_lab"]

# PyTorch CUDA 12.4 wheels (GTX 1650 / Turing, Windows, Python 3.12).
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
# main.py is a thin CLI; the *_runner.py modules are thin torch/transformers/
# airllm I/O proven via end-to-end runs. Their measurable logic lives in
# metrics.py / models.py / feasibility.py (pure, unit-tested).
omit = [
    "src/airllm_lab/main.py",
    "src/airllm_lab/services/baseline_runner.py",
    "src/airllm_lab/services/airllm_runner.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
